--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
   }],
   "content_security_policy": "script-src 'self' https://www.google.com; object-src 'self' https://www.google.com",
   "web_accessible_resources": [
-    "images/yellow.png",
+    "images/yellow.jpg",
     "images/web-left-1.png",
     "images/web-left-2.png",
     "images/web-left-3.png",
